--- a/css/mercadotemporario.css
+++ b/css/mercadotemporario.css
@@ -12,7 +12,7 @@
 
 body {
   background-color: #000;
-  font-family: brandon-grotesque, sans-serif;
+  font-family: brandon-grotesque;
   color: #fff;
   font-size: 1.666vw;
   line-height: 1.5;
@@ -25,7 +25,7 @@ h1 {
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
-  font-family: Emblema, sans-serif;
+  font-family: Emblema;
   font-size: 38px;
   line-height: 44px;
   font-weight: 700;
@@ -35,7 +35,7 @@ h1 {
 h2 {
   margin-top: 0px;
   margin-bottom: 0px;
-  font-family: Emblema, sans-serif;
+  font-family: Emblema;
   font-size: 3em;
   line-height: 1;
   font-weight: 700;
@@ -45,7 +45,7 @@ h2 {
 h3 {
   margin-top: 0px;
   margin-bottom: 0px;
-  font-family: Emblema, sans-serif;
+  font-family: Emblema;
   font-size: 1.3em;
   line-height: 1;
   font-weight: 700;
@@ -55,7 +55,7 @@ h3 {
 h4 {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-family: Emblema, sans-serif;
+  font-family: Emblema;
   font-size: 1em;
   line-height: 1.5;
   font-weight: 700;
@@ -63,7 +63,7 @@ h4 {
 }
 
 a {
-  font-family: Emblema, sans-serif;
+  font-family: Emblema;
   text-decoration: underline;
 }
 
@@ -177,7 +177,7 @@ blockquote {
   position: relative;
   z-index: 1;
   margin-bottom: -3%;
-  font-family: 'Jelly fresh', sans-serif;
+  font-family: 'Jelly fresh';
   font-size: 2.5em;
   text-transform: none;
 }
@@ -253,13 +253,34 @@ blockquote {
 }
 
 .tagline-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   padding-right: 2em;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
   color: #224c2f;
-  text-align: right;
+  text-align: center;
 }
 
 .badge-wrapper {
   padding-right: 2em;
+  -webkit-align-self: end;
+  -ms-flex-item-align: end;
+  -ms-grid-row-align: end;
+  align-self: end;
+  color: #fb6d4d;
 }
 
 .logo-wrapper {
@@ -291,9 +312,9 @@ blockquote {
 }
 
 .tagline-text {
-  font-family: brandon-grotesque, sans-serif;
+  font-family: brandon-grotesque;
   font-size: 2em;
-  line-height: 1.2;
+  line-height: 1;
   font-weight: 400;
   text-align: right;
 }
@@ -394,7 +415,7 @@ blockquote {
 
 .social-text {
   margin-left: 0.5em;
-  font-family: brandon-grotesque, sans-serif;
+  font-family: brandon-grotesque;
   font-weight: 700;
 }
 
@@ -403,7 +424,7 @@ blockquote {
 }
 
 .fluido-link {
-  font-family: Fluido, sans-serif;
+  font-family: Fluido;
   color: #224c2f;
   text-decoration: none;
 }
@@ -425,7 +446,7 @@ blockquote {
 
 .address-link {
   margin-left: 2em;
-  font-family: brandon-grotesque, sans-serif;
+  font-family: brandon-grotesque;
   color: #fb6d4d;
   text-decoration: none;
   text-transform: uppercase;
@@ -488,6 +509,39 @@ blockquote {
   display: flex;
 }
 
+.adress-link {
+  margin-left: 1em;
+  text-transform: uppercase;
+}
+
+.adress-link-block {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  font-family: brandon-grotesque;
+  color: #fb6d4d;
+  font-size: 1.8em;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.adress-link-block:hover {
+  color: #fb6d4d;
+  text-decoration: underline;
+}
+
+.intro-text {
+  font-family: brandon-grotesque;
+  font-size: 2em;
+  line-height: 1.5;
+  font-weight: 400;
+  text-transform: none;
+}
+
+.intro-text-link {
+  font-family: brandon-grotesque;
+  text-transform: none;
+}
+
 @media (max-width: 991px) {
   body {
     font-size: 16px;
@@ -509,11 +563,16 @@ blockquote {
     text-align: center;
   }
   .tagline-wrapper {
-    display: none;
+    padding-right: 0em;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-align-self: center;
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
+    text-align: center;
   }
   .logo-wrapper {
     padding-top: 0em;
@@ -524,6 +583,9 @@ blockquote {
   }
   .social-wrapper {
     height: 3em;
+  }
+  .tagline-text {
+    display: none;
   }
   .copyright-wrapper {
     height: 3em;
@@ -586,12 +648,19 @@ blockquote {
   .grid {
     min-height: 720px;
   }
+  .tagline-wrapper {
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+    font-size: 0.8em;
+  }
 }
 
 @media (max-width: 479px) {
   .grid {
     height: 85vh;
-    min-height: 480px;
+    min-height: 610px;
     -ms-grid-columns: 2.5em 1fr 2fr 2fr 1fr 2.5em;
     grid-template-columns: 2.5em 1fr 2fr 2fr 1fr 2.5em;
     -ms-grid-rows: 0.75fr 3em 2fr 3em 1.5fr 3em 4fr 3em;
@@ -604,8 +673,17 @@ blockquote {
     -ms-grid-row-align: end;
     align-self: end;
   }
+  .tagline-wrapper {
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+    font-size: 0.6em;
+  }
   .badge-wrapper {
+    padding-top: 1em;
     padding-right: 0em;
+    padding-bottom: 1em;
     -webkit-align-self: end;
     -ms-flex-item-align: end;
     -ms-grid-row-align: end;
@@ -622,12 +700,19 @@ blockquote {
     -ms-grid-row-align: center;
     align-self: center;
   }
+  .icon-holder {
+    display: none;
+  }
   .copyright-wrapper {
     -webkit-box-pack: start;
     -webkit-justify-content: flex-start;
     -ms-flex-pack: start;
     justify-content: flex-start;
     text-align: left;
+  }
+  .image-3 {
+    width: 6em;
+    height: 6em;
   }
   .social-link {
     font-size: 0.9em;
@@ -817,12 +902,59 @@ blockquote {
   grid-row-start: 3;
   -ms-grid-row-span: 2;
   grid-row-end: 5;
-  -ms-grid-column-align: end;
-  justify-self: end;
+  -ms-grid-column-align: center;
+  justify-self: center;
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
+}
+
+@media screen and (max-width: 991px) {
+  #w-node-0d1f8728bcf2-d14c36ab {
+    -ms-grid-column: 3;
+    grid-column-start: 3;
+    -ms-grid-column-span: 2;
+    grid-column-end: 5;
+    -ms-grid-row: 4;
+    grid-row-start: 4;
+    -ms-grid-row-span: 2;
+    grid-row-end: 6;
+    -ms-grid-column-align: end;
+    justify-self: end;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #w-node-0d1f8728bcf2-d14c36ab {
+    -ms-grid-column: 2;
+    grid-column-start: 2;
+    -ms-grid-column-span: 4;
+    grid-column-end: 6;
+    -ms-grid-row: 4;
+    grid-row-start: 4;
+    -ms-grid-row-span: 2;
+    grid-row-end: 6;
+    -ms-grid-column-align: end;
+    justify-self: end;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  #w-node-0d1f8728bcf2-d14c36ab {
+    -webkit-align-self: start;
+    -ms-flex-item-align: start;
+    -ms-grid-row-align: start;
+    align-self: start;
+  }
 }
 
 #w-node-f2d7474e3f87-d14c36ab {
@@ -834,8 +966,8 @@ blockquote {
   grid-row-start: 5;
   -ms-grid-row-span: 1;
   grid-row-end: 6;
-  -ms-grid-column-align: end;
-  justify-self: end;
+  -ms-grid-column-align: center;
+  justify-self: center;
   -webkit-align-self: end;
   -ms-flex-item-align: end;
   -ms-grid-row-align: end;
@@ -846,18 +978,18 @@ blockquote {
   #w-node-f2d7474e3f87-d14c36ab {
     -ms-grid-column: 4;
     grid-column-start: 4;
-    -ms-grid-column-span: 1;
-    grid-column-end: 5;
-    -ms-grid-row: 4;
-    grid-row-start: 4;
+    -ms-grid-column-span: 2;
+    grid-column-end: 6;
+    -ms-grid-row: 1;
+    grid-row-start: 1;
     -ms-grid-row-span: 2;
-    grid-row-end: 6;
-    -ms-grid-column-align: center;
-    justify-self: center;
-    -webkit-align-self: start;
-    -ms-flex-item-align: start;
-    -ms-grid-row-align: start;
-    align-self: start;
+    grid-row-end: 3;
+    -ms-grid-column-align: end;
+    justify-self: end;
+    -webkit-align-self: end;
+    -ms-flex-item-align: end;
+    -ms-grid-row-align: end;
+    align-self: end;
   }
 }
 
@@ -867,16 +999,16 @@ blockquote {
     grid-column-start: 2;
     -ms-grid-column-span: 4;
     grid-column-end: 6;
-    -ms-grid-row: 4;
-    grid-row-start: 4;
-    -ms-grid-row-span: 3;
-    grid-row-end: 7;
-    -ms-grid-column-align: center;
-    justify-self: center;
-    -webkit-align-self: end;
-    -ms-flex-item-align: end;
-    -ms-grid-row-align: end;
-    align-self: end;
+    -ms-grid-row: 1;
+    grid-row-start: 1;
+    -ms-grid-row-span: 1;
+    grid-row-end: 2;
+    -ms-grid-column-align: end;
+    justify-self: end;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
   }
 }
 
